# Test_task

./: .gitignore  README.md  docker-compose.yml
bet_maker/: .env  Dockerfile  entrypoint.sh  pyproject.toml
bet_maker/alembic/: env.py
bet_maker/alembic/versions/: 4c95fc58bd6d_initial_migration.py
bet_maker/src/: config.py  crud.py  database.py  main.py  models.py  rabbitmq.py  schemas.py
bet_maker/src/repositories/: beta_repository.py
bet_maker/src/services/: beta_services.py  events_services.py
bet_maker/src/tests/: .env  test_api.py
line_provider/: .env  Dockerfile  pytest.ini  requirements.txt
line_provider/src/: config.py  main.py  models.py  queue.py  repositories.py  services.py  shemas.py
line_provider/src/tests/: .env  test_app.py
